# cargo-fixie

./: Cargo.toml  README.md
src/: cli.rs  highlighting.rs  main.rs  parser.rs  ui.rs
