[package]
name = "cargo-fixie"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Eilidh Ward"]
description = "A very basic and friendly TUI for navigating Rust compiler errors"
keywords = ["cargo", "tui", "errors", "rustc", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/aylz83/cargo-fixie"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap-cargo = "0.18.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syntect = "5.3.0"

[[bin]]
name = "cargo-fixie"
path = "src/main.rs"
